# aikon

./: .env.template  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  run.sh  setup.sh  vhsapp_manuscript
front/app/: .python-version  pyproject.toml  requirements-base.in  requirements-base.txt  requirements-dev.in  requirements-dev.txt  requirements.txt
front/app/config/: .env.template  celery.py  settings.py  urls.py  wsgi.py
front/app/config/settings/: __init__.py  base.py  dev.py  docker_local.py  prod.py
front/app/mediafiles/: context.json
front/app/mediafiles/manifest/: 2.json  6.json
front/app/mediafiles/regions/: .gitkeep  wit10_pdf10_anno35.json  wit11_pdf11_anno36.json  wit12_pdf12_anno37.json  wit13_pdf13_anno38.json  wit15_pdf15_anno40.json  wit16_pdf16_anno41.json  wit1_pdf1_anno1.json  wit21_pdf21_anno46.json  wit22_pdf22_anno47.json  wit23_pdf23_anno48.json  wit28_pdf28_anno60.json  wit29_pdf29_anno56.json  wit2_pdf2_anno20.json  wit2_pdf2_anno22.json  wit2_pdf2_anno3.json  wit30_pdf30_anno59.json  wit31_pdf31_anno61.json  wit32_pdf32_anno62.json  wit33_pdf33_anno63.json  wit34_pdf34_anno65.json  wit6_pdf6_anno31.json  wit7_pdf7_anno32.json  wit8_pdf8_anno33.json  wit9_pdf10_anno17.json
front/app/mediafiles/similarity/: .gitkeep
front/app/region_extraction/: const.py  forms.py  tasks.py  urls.py  utils.py  views.py
front/app/regionextraction/: const.py  forms.py  tasks.py  urls.py  utils.py  views.py
front/app/regions/: const.py  forms.py  tasks.py  urls.py  utils.py  views.py
front/app/similarity/: const.py  forms.py  tasks.py  urls.py  utils.py  views.py
front/app/similarity/models/: region_pair.py  similarity_parameters.py
front/app/similarity/tests/: .env.template  .gitignore  data_digitization.csv  data_edition.csv  data_place.csv  data_regionpair.csv  data_regions.csv  data_witness.csv  extract.sql  extract_pipeline_local.sh  extract_pipeline_remote.sh  helpers.py  regionpair_duplicate.sql  test_regionpair.py
front/app/svelte/: eslint.config.js  package-lock.json  package.json  vite.config.js
front/app/svelte/scripts/: setupTypeScript.js
front/app/svelte/src/: Layout.svelte  (+8 more)
front/app/vectorization/: const.py  forms.py  urls.py  utils.py  views.py
front/app/webapp/: apps.py  search_filters.py  tasks.py  urls.py
front/app/webpack/: package-lock.json  package.json  rollup.config.js
(+4253 files in other folders)
