[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ansicon>=1.89.0",
    "arrow>=1.2.3",
    "asgiref>=3.11.1",
    "beautifulsoup4>=4.11.1",
    "blessed>=1.19.1",
    "bottle>=0.12.23",
    "cachetools>=5.2.0",
    "celery>=5.3.1",
    "certifi>=2026.1.4",
    "cffi>=1.15.1",
    "charset-normalizer>=2.1.0",
    "cryptography>=45.0.7",
    "cssselect2>=0.6.0",
    "defusedxml>=0.7.1",
    "deprecation>=2.1.0",
    "django>=5.2.11",
    "django-admin-extra-buttons>=1.5.4",
    "django-admin-searchable-dropdown>=1.2",
    "django-autocomplete-light>=3.12.1",
    "django-classy-tags>=3.0.1",
    "django-cors-headers>=3.13.0",
    "django-crispy-forms>=1.14.0",
    "django-filter>=23.5",
    "django-js-asset>=2.0.0",
    "django-native-tags>=0.5.3",
    "django-nested-admin>=4.1.6",
    "django-picklefield>=3.1",
    "django-polymorphic>=3.1.0",
    "djangorestframework>=3.15.2",
    "fontawesomefree>=6.1.1",
    "frozendict>=2.3.4",
    "idna>=3.11",
    "iiif-download>=0.1.15",
    "iiif-prezi>=0.3.0",
    "imagesize>=1.4.1",
    "jinxed>=1.2.0",
    "lxml>=6.0.2",
    "numpy>=2.4.2",
    "orjson>=3.11.7",
    "packaging>=21.3",
    "pdf2image>=1.16.2",
    "pikepdf>=6.2.0",
    "pillow>=12.1.1",
    "psutils>=3.3.11",
    "psycopg2-binary>=2.9.10",
    "pycparser>=2.21",
    "pyld>=2.0.3",
    "pymupdf>=1.27.1",
    "pymupdf-img>=0.1.1",
    "pyparsing>=3.0.9",
    "pypdf2>=2.10.4",
    "python-dateutil>=2.8.2",
    "python-environ>=0.4.54",
    "python-magic>=0.4.27",
    "python-monkey-business>=1.0.0",
    "redis>=4.5.5",
    "reportlab>=4.4.10",
    "requests>=2.32.5",
    "setuptools>=80.10.2",
    "six>=1.17.0",
    "sorl-thumbnail>=12.8.0",
    "soupsieve>=2.3.2.post1",
    "sqlparse>=0.5.5",
    "stream-unzip>=0.0.99",
    "svglib>=1.2.1",
    "tinycss2>=1.1.1",
    "tornado>=6.5.4",
    "tqdm>=4.67.3",
    "tripoli>=2.0.0",
    "tzdata>=2025.3",
    "unidecode>=1.1.2",
    "urllib3>=2.6.3",
    "wcwidth>=0.2.5",
    "webencodings>=0.5.1",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.2.0",
    "django-livereload-server>=0.4",
    "pandas>=2.3.0",
    "pre-commit>=2.19.0",
]
prod = [
    "gunicorn>=25.1.0",
]
